@@ -3017,7 +3017,6 @@ used in the top-level diversion.
 An initial neutral double quote in
 .I contents
 is stripped to allow the embedding of leading spaces.
-.\" XXX: useless request warning if no argument?
 .
 .
 .TP
